--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "ffmpeg-static": "^4.4.0",
     "libsodium-wrappers": "^0.7.9",
+    "simple-youtube-api": "^5.2.1",
     "ytdl-core": "^4.9.1"
   },
   "devDependencies": {
